--- a/youtube.css
+++ b/youtube.css
@@ -11,6 +11,7 @@ body {
   height: 55px;
   background-color: #fff;
   top: 0px;
+  z-index: 2;
 }
 
 header {
@@ -125,13 +126,16 @@ header {
 
 /*aside bar*/
 
-aside {
+.scroll {
+  position: absolute;
+  top: 55px;
+  bottom: 0;
+  width: 232px;
   flex-grow: 0;
   flex-shrink: 0;
-  width: 232px;
+  overflow: hidden;
   background-color: #fff;
 }
-
 .scroll::-webkit-scrollbar {
   width: 10px;
 }
@@ -141,10 +145,10 @@ aside {
 
 .scroll::-webkit-scrollbar-thumb {
   background: #888;
-  border-radius: 50%;
+  border-radius: 0;
 }
 .scroll:hover {
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 aside li {
@@ -390,18 +394,57 @@ h2 {
   justify-content: space-evenly;
   flex-wrap: wrap;
   align-content: flex-start;
-  margin: 12px 2px 0 7px;
+  margin: 28px 2px 0 239px;
 }
 
 .item {
+  position: relative;
   width: 250px;
   display: inline-block;
+  margin-bottom: 40px;
 }
 
+.item:hover .dots {
+  visibility: visible;
+}
 .main-title-bold {
-  font-weight: lighter;
+  font-weight: 600;
   font-size: 14px;
   color: #030303;
+  margin-right: 15px;
+}
+
+/*стилі для бокових фото в діві ійтем торонто*/
+
+.try {
+  display: flex;
+}
+
+.dots {
+  position: absolute;
+  background-image: url(main-bg-img/dots.png);
+  background-repeat: no-repeat;
+  height: 30px;
+  width: 20px;
+  top: 141px;
+  right: -4px;
+  visibility: hidden;
+}
+
+.bg-toronto {
+  background-image: url(main-bg-img/toronto.png);
+  background-repeat: no-repeat;
+  padding-left: 48px;
+  background-position: -6px 7px;
+  background-size: 45px;
+}
+
+.bg-kinopoisk {
+  background-image: url(main-bg-img/kinopoisk.png);
+  background-repeat: no-repeat;
+  padding-left: 48px;
+  background-position: -1px 7px;
+  background-size: 41px;
 }
 
 p {
